Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum rerum nemo consequuntur illo facere qui cum laborum soluta, molestiae corporis, recusandae, nihil optio? Distinctio fugiat optio, doloribus officia repudiandae omnis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias vitae dolorum magni natus sint a minus laboriosam facere quam, velit non ut eos iure suscipit soluta error quas sed.</p>
 </body>
 </html>
